--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     </modules>
 
     <properties>
+        <!-- spring boot 版本 -->
+        <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
+
         <lombok.version>1.16.20</lombok.version>
     </properties>
 
