--- a/cloud-components/cloud-components-test/pom.xml
+++ b/cloud-components/cloud-components-test/pom.xml
@@ -3,20 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>cloud</artifactId>
+        <artifactId>cloud-components</artifactId>
         <groupId>com.qlc.cloud</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud-components</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>cloud-components-exception</module>
-        <module>cloud-components-webportal</module>
-        <module>cloud-components-mongo</module>
-        <module>cloud-components-test</module>
-    </modules>
+    <artifactId>cloud-components-test</artifactId>
 
 
 </project>
