--- a/cloud-study/pom.xml
+++ b/cloud-study/pom.xml
@@ -9,13 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud-components</artifactId>
+    <artifactId>cloud-study</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>cloud-components-exception</module>
-        <module>cloud-components-webportal</module>
-        <module>cloud-components-mongo</module>
-        <module>cloud-components-test</module>
+        <module>cloud-study-design-patterns</module>
     </modules>
 
 
