--- a/cloud-study/cloud-study-design-patterns/pom.xml
+++ b/cloud-study/cloud-study-design-patterns/pom.xml
@@ -19,4 +19,13 @@
     </modules>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
