--- a/cloud-study/cloud-study-reflect/pom.xml
+++ b/cloud-study/cloud-study-reflect/pom.xml
@@ -3,19 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>cloud</artifactId>
+        <artifactId>cloud-study</artifactId>
         <groupId>com.qlc.cloud</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>cloud-study</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>cloud-study-design-patterns</module>
-        <module>cloud-study-lock</module>
-        <module>cloud-study-reflect</module>
-    </modules>
+    <artifactId>cloud-study-reflect</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.qlc.cloud</groupId>
+            <artifactId>cloud-entitys-sys</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
